; ModuleID = '/home/carl/AnghaBench/sqlcipher/tool/extr_lemon.c_handle_d_option.c'
source_filename = "/home/carl/AnghaBench/sqlcipher/tool/extr_lemon.c_handle_d_option.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@outputDir = common dso_local global i8* null, align 8
@stderr = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [15 x i8] c"out of memory\0A\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i8*)* @handle_d_option to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @handle_d_option(i8* %0) #0 {
  %2 = alloca i8*, align 8
  store i8* %0, i8** %2, align 8
  %3 = load i8*, i8** %2, align 8
  %4 = call i64 @lemonStrlen(i8* %3)
  %5 = add nsw i64 %4, 1
  %6 = call i64 @malloc(i64 %5)
  %7 = inttoptr i64 %6 to i8*
  store i8* %7, i8** @outputDir, align 8
  %8 = load i8*, i8** @outputDir, align 8
  %9 = icmp eq i8* %8, null
  br i1 %9, label %10, label %14

10:                                               ; preds = %1
  %11 = load i32, i32* @stderr, align 4
  %12 = call i32 @fprintf(i32 %11, i8* getelementptr inbounds ([15 x i8], [15 x i8]* @.str, i64 0, i64 0))
  %13 = call i32 @exit(i32 1) #3
  unreachable

14:                                               ; preds = %1
  %15 = load i8*, i8** @outputDir, align 8
  %16 = load i8*, i8** %2, align 8
  %17 = call i32 @lemon_strcpy(i8* %15, i8* %16)
  ret void
}

declare dso_local i64 @malloc(i64) #1

declare dso_local i64 @lemonStrlen(i8*) #1

declare dso_local i32 @fprintf(i32, i8*) #1

; Function Attrs: noreturn
declare dso_local i32 @exit(i32) #2

declare dso_local i32 @lemon_strcpy(i8*, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
